package com.example.mobistock.domain.entity.product;

import com.example.mobistock.domain.entity.order.ClaimOrder;
import com.example.mobistock.domain.entity.repair.RepairOrder;
import com.example.mobistock.domain.entity.saleOrder.SaleOrderItem;
import com.example.mobistock.domain.enums.ItemStatus;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.FetchType;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.OneToMany;
import jakarta.persistence.Table;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import org.hibernate.annotations.CreationTimestamp;
import org.hibernate.annotations.UpdateTimestamp;

import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.List;

@Entity
@Table(name = "PRODUCT_ITEM")
@Getter
@Setter
@NoArgsConstructor
public class ProductItem {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "item_id")
    private Integer itemId;

    @Column(name = "item_serial_number", unique = true, length = 100)
    private String serialNumber;

    @Column(name = "item_imei", unique = true, length = 15)
    private String imei;

    @Column(name = "item_lot_number", length = 50)
    private String lotNumber;

    @Enumerated(EnumType.STRING)
    @Column(name = "item_status", nullable = false, length = 20)
    private ItemStatus status = ItemStatus.Available;

    @ManyToOne(fetch = FetchType.LAZY, optional = false)
    @JoinColumn(name = "model_id", nullable = false)
    private ProductModel model;

    @OneToMany(mappedBy = "item")
    private List<SaleOrderItem> saleOrderItems = new ArrayList<>();

    @OneToMany(mappedBy = "item")
    private List<RepairOrder> repairOrders = new ArrayList<>();

    @OneToMany(mappedBy = "item")
    private List<ClaimOrder> claimOrders = new ArrayList<>();

    @CreationTimestamp
    @Column(name = "create_at", nullable = false, updatable = false)
    private LocalDateTime createdAt;

    @UpdateTimestamp
    @Column(name = "update_at")
    private LocalDateTime updatedAt;
}
