Project MobiStock {
  database_type: 'MySQL'
}

Enum item_status_enum {
  Available
  Sold
  Damaged
  Reserved
}

Enum sale_status_enum {
  Pending
  Completed
  Cancelled
}

Enum repair_status_enum {
  received
  in_progress
  waiting_payment
  completed
  cancelled
}

Enum repair_image_type_enum {
  received
  completed
}

Enum claim_status_enum {
  pending
  in_review
  resolved
  rejected
}

Enum claim_resolution_enum {
  unknown
  replacement
  refund
  repair
}

Enum order_type_enum {
  sale
  repair
  claim
}

Enum order_action_enum {
  created
  updated
  deleted
  status_changed
}

Enum user_role_enum {
  admin
  staff
}

Table BRAND {
  brand_id int [pk, increment]
  brand_name varchar(255) [not null]
  brand_country varchar(255)
  image_url varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table CATEGORY {
  category_id int [pk, increment]
  category_name_th varchar(255) [not null]
  category_name_en varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table PRODUCT_MODEL {
  model_id int [pk, increment]
  model_name varchar(255) [not null]
  model_made_in varchar(100)
  model_warranty_duration int [default: 12]
  brand_id int [not null]
  category_id int [not null]
  image_url varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table PRODUCT_ITEM {
  item_id int [pk, increment]
  item_serial_number varchar(100) [unique]
  item_imei varchar(15) [unique]
  item_lot_number varchar(50)
  item_status item_status_enum [default: 'Available']
  model_id int [not null]
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table CUSTOMER {
  customer_id int [pk, increment]
  customer_fname varchar(255) [not null]
  customer_lname varchar(255) [not null]
  customer_phone varchar(20) [not null]
  customer_tax_number varchar(20)
  customer_address text
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table SUPPLIER {
  supplier_id int [pk, increment]
  supplier_name varchar(255) [not null]
  supplier_phone varchar(20)
  supplier_email varchar(100)
  supplier_address text
  supplier_contact_person varchar(255)
  image_url varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table SALE_ORDER {
  sale_id int [pk, increment]
  sale_code varchar(50) [not null, unique]
  sale_date datetime [not null, default: `CURRENT_TIMESTAMP`]
  sale_total_amount decimal(10, 2) [not null]
  sale_additional_cost decimal(10, 2) [default: 0]
  sale_status sale_status_enum [default: 'Pending']
  customer_id int [not null]
  create_by varchar(255)
  update_by varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table SALE_ORDER_ITEM {
  sale_item_id int [pk, increment]
  sale_price decimal(10, 2) [not null]
  sale_id int [not null]
  item_id int [not null]
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table SALE_ORDER_IMAGE {
  image_id int [pk, increment]
  sale_id int [not null]
  image_url varchar(255) [not null]
  image_caption varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table SPARE_PART {
  part_id int [pk, increment]
  part_name varchar(255)
  part_quantity int [default: 0]
  image_url varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table SUPPLIER_SPARE_PART {
  supplier_id int [not null]
  part_id int [not null]
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (supplier_id, part_id) [pk]
  }
}

Table REPAIR_ORDER {
  repair_id int [pk, increment]
  repair_code varchar(255)
  repair_problem_desc text
  repair_technician_note text
  repair_date_received datetime
  repair_date_completed datetime
  repair_labor_cost decimal(10, 2)
  repair_status repair_status_enum [default: 'received']
  customer_id int
  item_id int
  create_by varchar(255)
  update_by varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table REPAIR_ORDER_PART {
  repair_id int [not null]
  part_id int [not null]
  repair_part_quantity int
  repair_part_unit_price decimal(10, 2)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (repair_id, part_id) [pk]
  }
}

Table REPAIR_ORDER_IMAGE {
  image_id int [pk, increment]
  repair_id int [not null]
  image_url varchar(255) [not null]
  image_caption varchar(255)
  image_type repair_image_type_enum [default: 'received']
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table CLAIM_ORDER {
  claim_id int [pk, increment]
  claim_code varchar(255)
  claim_date_received datetime
  claim_date_returned datetime
  claim_status claim_status_enum [default: 'pending']
  claim_resolution claim_resolution_enum [default: 'unknown']
  supplier_id int
  customer_id int
  item_id int
  create_by varchar(255)
  update_by varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
  update_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table ORDER_HISTORY_LOG {
  log_id int [pk, increment]
  order_type order_type_enum [not null]
  order_id int [not null]
  action order_action_enum [not null]
  description text
  old_data json
  new_data json
  action_by varchar(255)
  create_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table User {
  user_id int [pk, increment]
  username varchar(255) [not null]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  role user_role_enum [default: 'staff']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref: PRODUCT_MODEL.brand_id > BRAND.brand_id
Ref: PRODUCT_MODEL.category_id > CATEGORY.category_id
Ref: PRODUCT_ITEM.model_id > PRODUCT_MODEL.model_id

Ref: SALE_ORDER.customer_id > CUSTOMER.customer_id
Ref: SALE_ORDER_ITEM.sale_id > SALE_ORDER.sale_id
Ref: SALE_ORDER_ITEM.item_id > PRODUCT_ITEM.item_id
Ref: SALE_ORDER_IMAGE.sale_id > SALE_ORDER.sale_id [delete: cascade]

Ref: SUPPLIER_SPARE_PART.supplier_id > SUPPLIER.supplier_id
Ref: SUPPLIER_SPARE_PART.part_id > SPARE_PART.part_id

Ref: REPAIR_ORDER.customer_id > CUSTOMER.customer_id
Ref: REPAIR_ORDER.item_id > PRODUCT_ITEM.item_id
Ref: REPAIR_ORDER_PART.repair_id > REPAIR_ORDER.repair_id
Ref: REPAIR_ORDER_PART.part_id > SPARE_PART.part_id
Ref: REPAIR_ORDER_IMAGE.repair_id > REPAIR_ORDER.repair_id [delete: cascade]

Ref: CLAIM_ORDER.supplier_id > SUPPLIER.supplier_id
Ref: CLAIM_ORDER.customer_id > CUSTOMER.customer_id
Ref: CLAIM_ORDER.item_id > PRODUCT_ITEM.item_id

TableGroup Product_Catalog {
  BRAND
  CATEGORY
  PRODUCT_MODEL
  PRODUCT_ITEM
}

TableGroup Sales_Management {
  CUSTOMER
  SALE_ORDER
  SALE_ORDER_ITEM
  SALE_ORDER_IMAGE
}

TableGroup Repair_Service {
  REPAIR_ORDER
  REPAIR_ORDER_PART
  REPAIR_ORDER_IMAGE
}

TableGroup Spare_Parts_Suppliers {
  SPARE_PART
  SUPPLIER
  SUPPLIER_SPARE_PART
}

TableGroup Warranty_Claims {
  CLAIM_ORDER
}

TableGroup System_and_Security {
  User
  ORDER_HISTORY_LOG
}
